--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           path: ~/.poetry
           key: poetry-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Install project
+      - name: Install package
         run: |
           export POETRY_HOME=$HOME/.poetry
           export POETRY_CACHE_DIR=$HOME/.poetry/store
@@ -93,16 +93,16 @@ jobs:
           $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
       - name: Style guide
         run: |
-          poetry run flake8 --select=E,W,I --max-line-length 80 --import-order-style pep8 --exclude .git,__pycache__,.eggs,*.egg,.pytest_cache,fastapi_mvc/version.py,fastapi_mvc/__init__.py --tee --output-file=pep8_violations.txt --statistics --count fastapi_mvc
-          poetry run flake8 --select=D --ignore D301 --tee --output-file=pep257_violations.txt --statistics --count fastapi_mvc
+          poetry run flake8 --select=E,W,I --max-line-length 80 --import-order-style pep8 --exclude .git,__pycache__,.eggs,*.egg,.pytest_cache,fastapi_mvc/version.py,fastapi_mvc/__init__.py,fastapi_mvc/template --tee --output-file=pep8_violations.txt --statistics --count fastapi_mvc
+          poetry run flake8 --select=D --ignore D301 --tee --exclude fastapi_mvc/template --output-file=pep257_violations.txt --statistics --count fastapi_mvc
       - name: Code errors
-        run: poetry run flake8 --select=F --tee --output-file=flake8_code_errors.txt --statistics --count fastapi_mvc
+        run: poetry run flake8 --select=F --tee --exclude fastapi_mvc/template --output-file=flake8_code_errors.txt --statistics --count fastapi_mvc
       - name: Code complexity
-        run: poetry run flake8 --select=C901 --tee --output-file=code_complexity.txt --count fastapi_mvc
+        run: poetry run flake8 --select=C901 --tee --exclude fastapi_mvc/template --output-file=code_complexity.txt --count fastapi_mvc
       - name: TODO
-        run: poetry run flake8 --select=T --tee --output-file=todo_occurence.txt --statistics --count fastapi_mvc tests
+        run: poetry run flake8 --select=T --tee  --exclude fastapi_mvc/template--output-file=todo_occurence.txt --statistics --count fastapi_mvc tests
       - name: Black
-        run: poetry run black -l 80 --check fastapi_mvc
+        run: poetry run black -l 80 --exclude fastapi_mvc/template --check fastapi_mvc
   unit-tests:
     needs: install
     runs-on: ubuntu-latest
@@ -127,13 +127,13 @@ jobs:
           $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
       - name: Run unit tests
         run: poetry run py.test tests/unit --junit-xml=xunit-${{ matrix.python-version }}.xml
-      - name: Run coverage
-        run: poetry run pytest --cov=fastapi_mvc --cov-fail-under=70 --cov-report=xml --cov-report=term-missing tests
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          fail_ci_if_error: true
-          files: ./coverage.xml
+#      - name: Run coverage
+#        run: poetry run pytest --cov=fastapi_mvc --cov-report=xml --cov-fail-under=70 --cov-report=term-missing --cov-append /tmp/testapp/tests
+#      - name: Upload coverage to Codecov
+#        uses: codecov/codecov-action@v2
+#        with:
+#          fail_ci_if_error: true
+#          files: ./coverage.xml
   integration-tests:
     needs: install
     runs-on: ubuntu-latest
@@ -158,3 +158,61 @@ jobs:
           $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
       - name: Run integration tests
         run: poetry run py.test tests/integration --junit-xml=xunit-${{ matrix.python-version }}.xml
+  generate:
+    needs: install
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.7, 3.8, 3.9 ]
+
+    steps:
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Load Poetry cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.poetry
+          key: poetry-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Init test-project cache
+        id: cached-project
+        uses: actions/cache@v2
+        with:
+          path: ~/test-project
+          key: project-${{ matrix.python-version }}-${{ hashFiles('**/*.py') }}
+      - name: Config path and poetry
+        run: |
+          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
+        if: steps.cached-project.outputs.cache-hit != 'true'
+      - name: Generate test-project
+        run: poetry run fastapi-mvc new test-project
+        if: steps.cached-project.outputs.cache-hit != 'true'
+      - name: Install test-project
+        run: |
+          cd test-project
+          export POETRY_VIRTUALENVS_IN_PROJECT=true
+          make install
+        if: steps.cached-project.outputs.cache-hit != 'true'
+  template-metrics:
+    needs: generate
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.7, 3.8, 3.9 ]
+
+    steps:
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Load test-project cache
+        uses: actions/cache@v2
+        with:
+          path: ~/test-project
+          key: project-${{ matrix.python-version }}-${{ hashFiles('**/*.py') }}
+      - name: Style guide
+        run: |
+          ~/test-project/.venv/bin/flake8 --select=E,W,I --max-line-length 80 --import-order-style pep8 --exclude .git,__pycache__,.eggs,*.egg,.pytest_cache,test_project/version.py,test_project/__init__.py, --tee --output-file=pep8_violations.txt --statistics --count test_project
+          poetry run flake8 --select=D --ignore D301 --tee --exclude test_project/template --output-file=pep257_violations.txt --statistics --count test_project
