--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -281,7 +281,9 @@ jobs:
           $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
       - name: Run coverage
         run: |
-          poetry run pytest --cov=fastapi_mvc/cli, --cov-report=xml --cov-report=term-missing  tests
+          poetry run pytest --cov=fastapi_mvc/cli --cov-report=xml --cov-report=term-missing  tests
+          poetry env list
+          poetry env use test-project
           poetry run pytest --cov=~/.poetry/store/test-project/test_project --cov-fail-under=70 --cov-report=xml --cov-report=term-missing --cov-append  ~/.poetry/store/test-project/tests
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
