--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -283,10 +283,9 @@ jobs:
       - name: Run coverage
         run: |
           poetry run pytest --cov=fastapi_mvc/cli --cov-report=xml --cov-report=term-missing  tests
-          ls -lah ~/.poetry/store/virtualenvs
-          poetry env list
-          poetry env use test-project
-          poetry run pytest --cov=~/.poetry/store/test-project/test_project --cov-fail-under=70 --cov-report=xml --cov-report=term-missing --cov-append  ~/.poetry/store/test-project/tests
+          mv coverage.xml ~/.poetry/store/test-project
+          cd ~/.poetry/store/test-project
+          poetry run pytest --cov=test_project --cov-fail-under=70 --cov-report=xml --cov-report=term-missing --cov-append  tests
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
