Fix coverage job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -290,4 +290,4 @@ jobs:
         uses: codecov/codecov-action@v2
         with:
           fail_ci_if_error: true
-          files: ./coverage.xml
+          files: ~/.poetry/store/test-project/coverage.xml
