--- a/fastapi_mvc/template/{{cookiecutter.folder_name}}/.github/workflows/main.yml
+++ b/fastapi_mvc/template/{{cookiecutter.folder_name}}/.github/workflows/main.yml
@@ -61,13 +61,13 @@ jobs:
       - name: Build wheel{% endraw %}
         run: |
           $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
-          $HOME/.poetry/bin/poetry build -f wheel
-          echo "whl_name={{cookiecutter.package_name}}-$(cat TAG)-py3-none-any.whl" >> $GITHUB_ENV{% raw %}
+          $HOME/.poetry/bin/poetry build
+          echo "whl_name={{cookiecutter.package_name}}-$(cat TAG)-$GITHUB_SHA" >> $GITHUB_ENV{% raw %}
       - name: Archive build artifacts
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.whl_name }}
-          path: dist/${{ env.whl_name }}
+          path: dist
           retention-days: 7
   metrics:
     needs: install
