--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release and publish
+name: Release
 
 on:
   workflow_dispatch:
@@ -18,35 +18,20 @@ jobs:
       - uses: actions/checkout@v2
       - name: Configure env
         run: |
-          echo "whl_name=fastapi_mvc-$(cat TAG)-py3-none-any.whl" >> $GITHUB_ENV
+          echo "whl_name=fastapi_mvc-$(cat TAG)-$GITHUB_SHA" >> $GITHUB_ENV
           echo "release_tag=$(cat TAG)" >> $GITHUB_ENV
-      - uses: actions/download-artifact@v2
+      - name: Download wheel artifact
+        uses: dawidd6/action-download-artifact@v2
         with:
+          workflow: main.yml
+          workflow_conclusion: success
           name: ${{ env.whl_name }}
-          path: dist/${{ env.whl_name }}
+          path: dist
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           body: ${{ github.event.inputs.body }}
           tag: ${{ env.release_tag }}
           prerelease: ${{ github.event.inputs.prerelease }}
-          files: dist/${{ env.whl_name }}
+          files: dist/
           fail_on_unmatched_files: true
-          target_commitish: ${{ github.ref_name }}
-  publish:
-    needs: release
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Configure env
-        run: echo "whl_name=fastapi_mvc-$(cat TAG)-py3-none-any.whl" >> $GITHUB_ENV
-      - uses: actions/download-artifact@v2
-        with:
-          name: ${{ env.whl_name }}
-          path: dist/${{ env.whl_name }}
-      - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
