--- a/fastapi_mvc/template/{{cookiecutter.folder_name}}/pyproject.toml
+++ b/fastapi_mvc/template/{{cookiecutter.folder_name}}/pyproject.toml
@@ -21,15 +21,21 @@ fastapi = "~0.70.0"
 uvicorn = {extras = ["standard"], version = "~0.15.0"}
 gunicorn = "~20.1.0"
 click = "~7.1.2"
-{% if cookiecutter.redis == "yes" %}aioredis = "~2.0.0"{%- endif %}
-{% if cookiecutter.aiohttp == "yes" %}aiohttp = "~3.8.0"{%- endif %}
+{%- if cookiecutter.redis == "yes" %}
+aioredis = "~2.0.0"
+{%- endif %}
+{%- if cookiecutter.aiohttp == "yes" %}
+aiohttp = "~3.8.0"
+{%- endif %}
 
 [tool.poetry.dev-dependencies]
 pytest = "~6.2.4"
 pytest-cov = "~2.12.0"
 pytest-asyncio = "~0.15.1"
 requests = "~2.25.1"
-{% if cookiecutter.aiohttp == "yes" %}aioresponses = "~0.7.2"{%- endif %}
+{%- if cookiecutter.aiohttp == "yes" %}
+aioresponses = "~0.7.2"
+{%- endif %}
 mock = "~4.0.3"
 flake8 = "~3.9.2"
 flake8-docstrings = "~1.6.0"
