--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: Documentation
+name: Build Docs
 
 on:
   pull_request:
@@ -6,23 +6,7 @@ on:
       - master
 
 jobs:
-  # This job checks if an identical workflow is being triggered by different
-  # event and skips it. For instance there is no need to run the same pipeline
-  # twice for pull_request and push for identical commit sha.
-  pre_job:
-    runs-on: ubuntu-latest
-    outputs:
-      should_skip: ${{ steps.skip_check.outputs.should_skip }}
-    steps:
-      - id: skip_check
-        uses: fkirc/skip-duplicate-actions@v3.4.1
-        with:
-          skip_after_successful_duplicate: 'true'
-          concurrent_skipping: same_content
-          do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
-  docs:
-    needs: pre_job
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
+  build-docs:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,14 +15,32 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Build documentation
-        run: make docs
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.5.0
+      - name: Load Poetry cache
+        uses: actions/cache@v2
         with:
-          target_branch: gh-pages
-          build_dir: site
-          commit_message: "Deploy to GitHubPages"
-          jekyll: false
+          path: ~/.poetry
+          key: poetry-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Config path and poetry
+        run: |
+          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
+      - name: Build documentation
+        run: |
+          make docs
+          echo "docs_build_name=docs-$(cat TAG)-$GITHUB_SHA" >> $GITHUB_ENV
+      - name: Archive build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.docs_build_name }}
+          path: site
+          retention-days: 60
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v1.1.5
+        with:
+          publish-dir: site
+          production-deploy: false
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          enable-commit-comment: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
